--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,8 +1,17 @@
-.btn {
+.borderbutton {
   border-radius: 20px;
   font-size: 1.2rem;
   color: white;
-  background: #016b6b;
+  background: #fc6011;
   border: none;
-  padding: 10px 20px;
+  padding: 10% 90%;
+}
+
+.textbutton {
+  border-radius: 20px;
+  font-size: 1.2rem;
+  color: #fc6011;
+  background: white;
+  border: 1px solid #fc6011;
+  padding: 10% 90%;
 }
