create password input

--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -1,4 +1,4 @@
-.inputbox {
+.inputemail {
   color: black;
   font-size: 1.5em;
   text-align: left;
@@ -7,7 +7,20 @@
   border-radius: 20px;
   background-color: #f2f2f2;
   border: none;
+  width: 90vw;
 }
 ::placeholder {
   color: #b6b7b7;
+}
+
+.inputpassword {
+  color: black;
+  font-size: 1.5em;
+  text-align: left;
+  size: 20pt;
+  padding: 18px 224px 19px 34px;
+  border-radius: 20px;
+  background-color: #f2f2f2;
+  border: none;
+  width: 90vw;
 }
