--- a/src/components/cards/card-american.html
+++ b/src/components/cards/card-american.html
@@ -1,6 +1,10 @@
-<div class="card">
-  <div class="card-body-american"></div>
+<div class="card-body-american">
+  <img
+    src="https://images.unsplash.com/photo-1561043433-9265f73e685f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzB8fGFmcmljYW4lMjBmb29kfGVufDB8MnwwfA%3D%3D&auto=format&fit=crop&w=500&q=60"
+    class="img-fluid"
+    alt="American burger and fries"
+  />
 </div>
 <div>
-  <h4 class="headingam">American</h4>
+  <h4 class="heading">American</h4>
 </div>
