--- a/src/components/cards/card-african.html
+++ b/src/components/cards/card-african.html
@@ -1,6 +1,10 @@
-<div class="card">
-  <div class="card-body-african"></div>
+<div class="card-body-african">
+  <img
+    src="https://images.unsplash.com/photo-1582034986517-30d163aa1da9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTQ3fHxhZnJpY2FuJTIwZm9vZHxlbnwwfDJ8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+    class="img-fluid"
+    alt="Bowl of african food"
+  />
 </div>
 <div>
-  <h4 class="headingaf">African</h4>
+  <h4 class="heading">African</h4>
 </div>
