grid container layout

--- a/src/components/cards/card-african.html
+++ b/src/components/cards/card-african.html
@@ -1,10 +1,9 @@
-<div class="card-body-african">
+<figure class="card">
   <img
-    src="https://images.unsplash.com/photo-1582034986517-30d163aa1da9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTQ3fHxhZnJpY2FuJTIwZm9vZHxlbnwwfDJ8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-    class="img-fluid"
-    alt="Bowl of african food"
+    class="card-image"
+    src="https://images.unsplash.com/photo-1582034986517-30d163aa1da9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTQ3fHxhZnJpY2FuJTIwZm9vZHxlbnwwfDJ8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60
+    "
+    alt=""
   />
-</div>
-<div>
-  <h4 class="heading">African</h4>
-</div>
+  <p class="card-text">Italian</p>
+</figure>
