--- a/src/components/cards/card-spanish.html
+++ b/src/components/cards/card-spanish.html
@@ -1,11 +1,9 @@
-<div class="card-body-spanish">
+<figure class="card">
   <img
-    src="https://images.unsplash.com/photo-1591535375570-5f70748e0569?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cGFlbGxhfGVufDB8MnwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-    class="img-fluid"
-    alt="Bowl of spanish paella"
+    class="card-image"
+    src="https://images.unsplash.com/photo-1591535375570-5f70748e0569?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cGFlbGxhfGVufDB8MnwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60
+    "
+    alt=""
   />
-</div>
-
-<div>
-  <h4 class="heading">Spanish</h4>
-</div>
+  <p class="card-text">Spanish</p>
+</figure>
