delete one file

--- a/src/components/cards/card-container.html
+++ b/src/components/cards/card-container.html
@@ -1,4 +1,4 @@
-<section class="card-container">
+<section class="card-container" tabindex="0">
   <!--African-->
   <figure class="card">
     <img
@@ -7,30 +7,42 @@
       "
       alt=""
     />
-    <p class="card-text">Italian</p>
+    <figurecaption class="card-text">African</figurecaption>
   </figure>
 
   <!--American-->
 
-  <figure class="card">
+  <figure class="card" tabindex="0">
     <img
       class="card-image"
       src="https://images.unsplash.com/photo-1561043433-9265f73e685f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzB8fGFmcmljYW4lMjBmb29kfGVufDB8MnwwfA%3D%3D&auto=format&fit=crop&w=500&q=60
       "
       alt=""
     />
-    <p class="card-text">Italian</p>
+    <figurecaption class="card-text">American</figurecaption>
   </figure>
 
   <!--Spanish-->
 
-  <figure class="card">
+  <figure class="card" tabindex="0">
     <img
       class="card-image"
       src="https://images.unsplash.com/photo-1591535375570-5f70748e0569?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cGFlbGxhfGVufDB8MnwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60
       "
       alt=""
     />
-    <p class="card-text">Spanish</p>
+    <figurecaption class="card-text">Spanish</figurecaption>
   </figure>
 </section>
+<p>
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque explicabo
+  velit non placeat nisi assumenda deleniti deserunt quam rem sapiente minima,
+  officiis obcaecati quo cupiditate quia quis alias, optio praesentium
+  molestias? Esse excepturi placeat neque magni nesciunt adipisci illo, sint nam
+  mollitia, ad corrupti vitae quos architecto illum eveniet possimus. Rerum
+  illum omnis veritatis ratione, dolorem et non ex odio! Laborum, asperiores
+  expedita? Numquam, consectetur culpa? Perferendis qui, est provident nesciunt
+  quia, eius velit iste dolor libero omnis mollitia. Enim facere praesentium
+  debitis saepe labore! Iure, repellat amet rem quidem laudantium fuga alias
+  illo vel nostrum quod. Eum, voluptas sit?
+</p>
