--- a/src/components/cards/card-african.html
+++ b/src/components/cards/card-african.html
@@ -1,9 +1,9 @@
-<figure class="card">
+<figure class="card" tabindex="0">
   <img
     class="card-image"
     src="https://images.unsplash.com/photo-1582034986517-30d163aa1da9?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTQ3fHxhZnJpY2FuJTIwZm9vZHxlbnwwfDJ8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60
     "
     alt=""
   />
-  <p class="card-text">Italian</p>
+  <figurecaption class="card-text">African</figurecaption>
 </figure>
