--- a/src/components/cards/card-american.html
+++ b/src/components/cards/card-american.html
@@ -1,9 +1,9 @@
-<figure class="card">
+<figure class="card" tabindex="0">
   <img
     class="card-image"
     src="https://images.unsplash.com/photo-1561043433-9265f73e685f?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzB8fGFmcmljYW4lMjBmb29kfGVufDB8MnwwfA%3D%3D&auto=format&fit=crop&w=500&q=60
     "
     alt=""
   />
-  <p class="card-text">Italian</p>
+  <figurecaption class="card-text">American</figurecaption>
 </figure>
