--- a/src/components/cards/card-spanish.html
+++ b/src/components/cards/card-spanish.html
@@ -1,9 +1,9 @@
-<figure class="card">
+<figure class="card" tabindex="0">
   <img
     class="card-image"
     src="https://images.unsplash.com/photo-1591535375570-5f70748e0569?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cGFlbGxhfGVufDB8MnwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60
     "
     alt=""
   />
-  <p class="card-text">Spanish</p>
+  <figurecaption class="card-text">Spanish</figurecaption>
 </figure>
