--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -1,21 +1,36 @@
 .card {
   display: flex;
   flex-direction: column;
+  width: 100px;
+  margin: 0;
+  padding-top: 10px;
 }
 
 .card-image {
   border-radius: 20%;
-  width: 8vw;
   object-fit: cover;
 }
 
 .card-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  max-width: 90vw;
+  overflow-x: auto;
+  column-gap: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  justify-content: start;
 }
 
 .card-text {
   text-align: center;
   font-size: 100%;
+  padding-top: 3px;
+}
+.card-container::-webkit-scrollbar {
+  display: none;
+}
+
+.card-container::after {
+  content: "";
+  width: 1px;
 }
