--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -1,26 +1,33 @@
-.inputemail {
-  color: black;
-  font-size: 1.5em;
-  text-align: left;
-  size: 20pt;
-  padding: 18px 224px 19px 34px;
-  border-radius: 20px;
-  background-color: #f2f2f2;
-  border: none;
-  width: 90vw;
-}
-::placeholder {
-  color: #b6b7b7;
-}
-
 .inputpassword {
+  border-radius: 20%;
+  font-size: 14px;
+  line-height: 19px;
   color: black;
-  font-size: 1.5em;
-  text-align: left;
-  size: 20pt;
-  padding: 18px 224px 19px 34px;
-  border-radius: 20px;
-  background-color: #f2f2f2;
+  background: var(--InputBgClr);
   border: none;
-  width: 90vw;
+  padding: 17px 34px;
+  min-width: 250px;
+}
+.inputpassword:focus {
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 1px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.459) inset;
+}
+.inputemail {
+  border-radius: 28px;
+  font-size: 14px;
+  line-height: 19px;
+  color: black;
+  background: #f2f2f2;
+  border: none;
+  padding: 17px 34px;
+  min-width: 250px;
+}
+.inputemail:focus {
+  outline-color: rgba(255, 255, 255, 0);
+  outline-offset: 1px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.459) inset;
+}
+.input:-webkit-autofill {
+  border: hidden;
 }
