--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -1,4 +1,4 @@
-.button {
+.btn {
   border-radius: 28px;
   font-size: 16px;
   color: white;
@@ -6,33 +6,7 @@
   border: none;
   padding: 10px 40px;
   line-height: 19px;
-}
-.button:focus {
-  outline-color: rgba(255, 255, 255, 0);
-  outline-offset: 1px;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.459) inset;
-}
-.button:-webkit-autofill {
-  border: hidden;
-}
-
-.inputemail {
-  border-radius: 28px;
-  font-size: 14px;
-  line-height: 19px;
-  color: black;
-  background: #f2f2f2;
-  border: none;
-  padding: 17px 34px;
-  min-width: 250px;
-}
-.inputemail:focus {
-  outline-color: rgba(255, 255, 255, 0);
-  outline-offset: 1px;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.459) inset;
-}
-.input:-webkit-autofill {
-  border: hidden;
+  margin-top: 20px;
 }
 
 .form {
@@ -43,4 +17,21 @@
 
 .form .input {
   margin-top: 2em;
+}
+
+.form__hint a {
+  margin-left: 0.5em;
+}
+
+.form__otp {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: center;
+  grid-column-gap: 1.2em;
+}
+
+.form__otp input {
+  padding: 10px;
+  width: 2.8rem;
+  border-radius: 10px;
 }
