--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -2,7 +2,7 @@
   border-radius: 28px;
   font-size: 16px;
   color: white;
-  background: #a467dd;
+  background: #7099f1;
   border: none;
   padding: 10px 40px;
   line-height: 19px;
@@ -34,4 +34,13 @@
   padding: 10px;
   width: 2.8rem;
   border-radius: 10px;
+}
+
+a,
+a:visited,
+a:active,
+a:hover {
+  color: #7099f1;
+  font-weight: bold;
+  text-decoration: none;
 }
