💄 Add font-family

--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@font-face {
+  font-family: "Metropolis";
+  src: url("./assets/metropolis.woff2") format("woff2"),
+    url("./assets/metropolis.woff") format("woff"),
+    url("./assets/metrolpolis.ttf") format("ttf");
+}
 
 *,
 *::after,
@@ -11,7 +16,7 @@ html {
 }
 
 body {
-  font-family: "Quicksand", sans-serif;
+  font-family: "Metrolpolis", sans-serif;
   margin: 0;
 }
 
@@ -21,5 +26,5 @@ select,
 optgroup,
 textarea {
   margin: 0;
-  font-family: "Quicksand", sans-serif;
+  font-family: "Metropolis", sans-serif;
 }
