--- a/src/global.css
+++ b/src/global.css
@@ -28,3 +28,12 @@ textarea {
   margin: 0;
   font-family: "Metropolis", sans-serif;
 }
+
+a,
+a:visited,
+a:active,
+a:hover {
+  color: #7099f1;
+  font-weight: bold;
+  text-decoration: none;
+}
